--- a/templates/review.html
+++ b/templates/review.html
@@ -49,126 +49,35 @@
 我的寝卧</a>
                             </div>
                         </div>
+                        {%for car_data in all_cars1.list%}
                         <div class="ipmanage_subarticle ">
                             <div class="article_cover">
                                 <a href="http://plus.zealer.com/post/7215.html" class="global_gaNode" data-galabel="plus_ip_1_article_1" target="_blank">
-                                    <img src="http://xxxche.com/images/chetuan/20160426134625_36df5392b701ec748c844b4bd6bf93b0.jpg" alt="东风本田 思域">
+                                    <img src="{{car_data.thumb}}" alt="{{car_data.vender_name}} {{car_data.name}}">
                                 </a>
                             </div>
                             <div class="article_down">
                                 <div class="article_title">
                                     <a href="http://plus.zealer.com/post/7215.html" class="global_gaNode" data-galabel="plus_ip_1_article_1" target="_blank">
-东风本田 思域</a>
+                                        {{car_data.vender_name}} {{car_data.name}}</a>
                                 </div>
                                 <div class="article_user clear">
                                     <div class="user_logo">
-                                        <a href="http://www.zealer.com/personal/458272" class="global_gaNode" data-galabel="plus_ip_1_personal_1" rel="nofollow" target="_blank">
+                                        <a href="/t/{{car_data.name}}" class="global_gaNode" data-galabel="plus_ip_1_personal_1" rel="nofollow" target="_blank">
                                             <img src="http://car0.autoimg.cn/logo/brand/50/129302239927557500.jpg">
                                         </a>
                                     </div>
                                     <span class="user_name">
-<a href="http://www.zealer.com/personal/458272" class="global_gaNode" data-galabel="plus_ip_1_personal_1" rel="nofollow" target="_blank">
-Honda</a>
-</span>
+                                        <a href="http://www.zealer.com/personal/458272" class="global_gaNode" data-galabel="plus_ip_1_personal_1" rel="nofollow" target="_blank">Honda</a>
+                                    </span>
                                     <span class="visit_nums topic_num">
-<span class="topic_visit_num plusGlobalIcons">
-7355</span>
-                                    <span class="topic_comment_num plusGlobalIcons">
-28</span>
+                                        <span class="topic_visit_num plusGlobalIcons">7355</span>
+                                        <span class="topic_comment_num plusGlobalIcons">28</span>
                                     </span>
                                 </div>
                             </div>
                         </div>
-                        <div class="ipmanage_subarticle ">
-                            <div class="article_cover">
-                                <a href="http://plus.zealer.com/post/68030.html" class="global_gaNode" data-galabel="plus_ip_1_article_2" target="_blank">
-                                    <img src="http://xxxche.com/images/chetuan/20160722163447_ebc4b46b1a276235b7f453ce64085f5b.jpg" alt="【设计师桌面】伪文艺，伪设计师，伪极客的办公区">
-                                </a>
-                            </div>
-                            <div class="article_down">
-                                <div class="article_title">
-                                    <a href="http://plus.zealer.com/post/68030.html" class="global_gaNode" data-galabel="plus_ip_1_article_2" target="_blank">
-东风日产 2016款天籁</a>
-                                </div>
-                                <div class="article_user clear">
-                                    <div class="user_logo">
-                                        <a href="http://www.zealer.com/personal/929877" class="global_gaNode" data-galabel="plus_ip_1_personal_2" rel="nofollow" target="_blank">
-                                            <img src="http://car0.autoimg.cn/logo/brand/50/129302257960370000.jpg">
-                                        </a>
-                                    </div>
-                                    <span class="user_name">
-<a href="http://www.zealer.com/personal/929877" class="global_gaNode" data-galabel="plus_ip_1_personal_2" rel="nofollow" target="_blank">
-Nissan</a>
-</span>
-                                    <span class="visit_nums topic_num">
-<span class="topic_visit_num plusGlobalIcons">
-2000</span>
-                                    <span class="topic_comment_num plusGlobalIcons">
-9</span>
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="ipmanage_subarticle ">
-                            <div class="article_cover">
-                                <a href="http://plus.zealer.com/post/67056.html" class="global_gaNode" data-galabel="plus_ip_1_article_3" target="_blank">
-                                    <img src="http://xxxche.com/images/chetuan/20160625212312_07251adb546e9b02eb7553a2e1c628aa.jpg" alt="【桌面 2.0】改良后的桌面来一发">
-                                </a>
-                            </div>
-                            <div class="article_down">
-                                <div class="article_title">
-                                    <a href="http://plus.zealer.com/post/67056.html" class="global_gaNode" data-galabel="plus_ip_1_article_3" target="_blank">
-一汽大众 迈腾</a>
-                                </div>
-                                <div class="article_user clear">
-                                    <div class="user_logo">
-                                        <a href="http://www.zealer.com/personal/115094" class="global_gaNode" data-galabel="plus_ip_1_personal_3" rel="nofollow" target="_blank">
-                                            <img src="http://car3.autoimg.cn/cardfs/brand/50/g23/M09/5B/8F/autohomecar__wKgFXFbCuGGAark9AAAOm8MlQDA537.jpg">
-                                        </a>
-                                    </div>
-                                    <span class="user_name">
-<a href="http://www.zealer.com/personal/115094" class="global_gaNode" data-galabel="plus_ip_1_personal_3" rel="nofollow" target="_blank">
-Volkswagen</a>
-</span>
-                                    <span class="visit_nums topic_num">
-<span class="topic_visit_num plusGlobalIcons">
-3445</span>
-                                    <span class="topic_comment_num plusGlobalIcons">
-14</span>
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="ipmanage_subarticle margin_no">
-                            <div class="article_cover">
-                                <a href="http://plus.zealer.com/post/68038.html" class="global_gaNode" data-galabel="plus_ip_1_article_4" target="_blank">
-                                    <img src="http://xxxche.com/images/chetuan/20160525150739_ce9da52e62e41751375b10e0a1650068.jpg" alt="【败家爷们装备】呕心沥血，把全部家当都晒出来了！">
-                                </a>
-                            </div>
-                            <div class="article_down">
-                                <div class="article_title">
-                                    <a href="http://plus.zealer.com/post/68038.html" class="global_gaNode" data-galabel="plus_ip_1_article_4" target="_blank">
-上汽集团 荣威RX5</a>
-                                </div>
-                                <div class="article_user clear">
-                                    <div class="user_logo">
-                                        <a href="http://www.zealer.com/personal/847366" class="global_gaNode" data-galabel="plus_ip_1_personal_4" rel="nofollow" target="_blank">
-                                            <img src="http://car0.autoimg.cn/logo/brand/50/129302257820682500.jpg">
-                                        </a>
-                                    </div>
-                                    <span class="user_name">
-<a href="http://www.zealer.com/personal/847366" class="global_gaNode" data-galabel="plus_ip_1_personal_4" rel="nofollow" target="_blank">
-Roewe</a>
-</span>
-                                    <span class="visit_nums topic_num">
-<span class="topic_visit_num plusGlobalIcons">
-674795</span>
-                                    <span class="topic_comment_num plusGlobalIcons">
-63</span>
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
+                        {%endfor%}
                     </div>
                     <div class="ipManage_wrap clear">
                         <a name="3" id="3"></a>
