--- a/templates/admin/car_data_new.html
+++ b/templates/admin/car_data_new.html
@@ -38,6 +38,10 @@
                       <input id="car_size" type="text" class="form-control"/>
                     </div>
                     <div class="form-group">
+                      <label>car_sort</label>
+                      <input id="car_sort" type="text" class="form-control"/>
+                    </div>
+                    <div class="form-group">
                       <label>Name</label>
                       <input id="name" type="text" class="form-control"/>
                     </div>
@@ -116,6 +120,7 @@ $(document).on('click', '#save-nowfeed', function() {
     data: JSON.stringify({
       data_type: $('#data_type').val(),
       car_size: $('#car_size').val(),
+      car_sort: $('#car_sort').val(),
       name: $('#name').val(),
       pinyin: $('#pinyin').val(),
       english: $('#english').val(),
