--- a/templates/admin/car_brand.html
+++ b/templates/admin/car_brand.html
@@ -63,7 +63,7 @@
                   <a href="" type="button" class="btn btn-default btn-xs" target="_blank">
                     <i class="fa fa-link"></i>
                   </a>
-                  <a href="/admin/carbrand/edit/{{data.id}}" type="button" class="btn btn-default btn-xs" target="_blank">
+                  <a href="/admin/cardata/edit/{{data.id}}" type="button" class="btn btn-default btn-xs" target="_blank">
                     <i class="fa fa-pencil-square-o"></i>
                   </a>
                   <a type="button" class="delete btn btn-default btn-xs" data-toggle="modal" data-target="#delModal" data-id="{{data.id}}" target="_blank">
