--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4,3 +4,17 @@
 .Post-title {
 	margin-bottom: 15px;
 }
+h2 {
+    display: block;
+    font-size: 1.5em;
+    -webkit-margin-before: 0.83em;
+    -webkit-margin-after: 0.83em;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+    font-weight: bold;
+}
+@media (min-width: 768px) {
+	.no-touch .Post-actions {
+    opacity: 1;
+}
+}
