--- a/templates/post.html
+++ b/templates/post.html
@@ -7,15 +7,13 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
     <meta name="theme-color" content="#E7672E">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://discuss.flarum.org/assets/forum-64c7858d.css">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700,600">
-    <style type="text/css" adt="123"></style>
-    <style type="text/css"></style>
-    <link type="text/css" rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.4.0/styles/default.min.css">
-    <script type="text/javascript" async="" src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.4.0/highlight.min.js"></script>
     <script src="https://use.fontawesome.com/328dabcfd7.js"></script>
-    <link rel="stylesheet" href="/static/css/main.css"></head>
-  
+    <link rel="stylesheet" href="/static/css/main.css">
+  </head>
+
   <body class="no-touch">
     <div id="app" class="App affix hasPane App--discussion">
       <div id="app-navigation" class="App-navigation">
