--- a/templates/index.html
+++ b/templates/index.html
@@ -161,7 +161,7 @@
           </li>
         </ul>
       </a>
-      <span class="DiscussionListItem-count" title="Mark as Read">2</span></div>
+      <span class="DiscussionListItem-count" title="设为已读">{{post.reply_num}}</span></div>
   </div>
 </li>
                     {%endfor%}
