--- a/templates/layout.html
+++ b/templates/layout.html
@@ -67,12 +67,13 @@
                 </li>
                 <li class="item-notifications">
                   <div class="ButtonGroup Dropdown dropdown NotificationsDropdown itemCount0">
-                    <button class="Dropdown-toggle Button Button--flat" data-toggle="dropdown" title="Notifications">
+                    <button class="Dropdown-toggle Button Button--flat" data-toggle="dropdown" title="消息">
                       <i class="icon fa fa-fw fa-bell Button-icon"></i>
-                      <span class="Button-label">Notifications</span></button>
+                      <span class="Button-label">消息</span></button>
                     <div class="Dropdown-menu Dropdown-menu--right"></div>
                   </div>
                 </li>
+                {%if user_info%}
                 <li class="item-session">
                   <div class="ButtonGroup Dropdown dropdown SessionDropdown itemCount4">
                     <button class="Dropdown-toggle Button Button--user Button--flat" data-toggle="dropdown">
@@ -100,6 +101,10 @@
                     </ul>
                   </div>
                 </li>
+                {%else%}
+                <li class="item-signUp unlogin"><button class="Button Button--link" type="button" title="注册"><span class="Button-label">注册</span></button></li>
+                <li class="item-logIn unlogin"><button class="Button Button--link" type="button" title="登录"><span class="Button-label">登录</span></button></li>
+                {%endif%}
               </ul>
             </div>
           </div>
