--- a/templates/post.html
+++ b/templates/post.html
@@ -915,16 +915,15 @@
 {% endblock %}
 
 {% block modal %}
-    <div id="modal"><div class="ModalManager modal fade" style=""><div class="Modal modal-dialog FlagPostModal Modal--small"><div class="Modal-content"><div class="Modal-close App-backControl"><button class="Button Button--icon Button--link hasIcon" type="button"><i class="icon fa fa-fw fa-times Button-icon"></i></button></div><form><div class="Modal-header"><h3 class="App-titleControl App-titleControl--text">Flag Post</h3></div><div class="Modal-alert"></div><div class="Modal-body"><div class="Form Form--centered"><div class="Form-group"><div><label class="checkbox"><input type="radio" name="reason" value="off_topic"><strong>Off-topic</strong>This post is not relevant to the current discussion and should be moved elsewhere.</label><label class="checkbox"><input type="radio" name="reason" value="inappropriate"><strong>Inappropriate</strong>This post is offensive, abusive, or violates our <a>community guidelines</a>.</label><label class="checkbox"><input type="radio" name="reason" value="spam"><strong>Spam</strong>This post is an advertisement.</label><label class="checkbox"><input type="radio" name="reason" value="other"><strong>Other</strong></label></div></div><div class="Form-group"><button class="Button Button--primary Button--block disabled" type="submit" disabled="" title="Flag Post"><span class="Button-label">Flag Post</span></button></div></div></div></form></div></div></div></div>
-    <div id="alerts">
-      <div class="AlertManager"></div>
-    </div>
+    <div id="modal"><div class="ModalManager modal fade" style=""></div></div>
 {% endblock %}
 
 {% block javascript %}
 <script type="text/javascript">
 $(document).ready(function() {
   $(document).on('click', '.item-flag', function() {
+    var modal = '<div class="Modal modal-dialog FlagPostModal Modal--small"><div class="Modal-content"><div class="Modal-close App-backControl"><button class="Button Button--icon Button--link hasIcon" type="button"><i class="icon fa fa-fw fa-times Button-icon"></i></button></div><form><div class="Modal-header"><h3 class="App-titleControl App-titleControl--text">Flag Post</h3></div><div class="Modal-alert"></div><div class="Modal-body"><div class="Form Form--centered"><div class="Form-group"><div><label class="checkbox"><input type="radio" name="reason" value="off_topic"><strong>Off-topic</strong>This post is not relevant to the current discussion and should be moved elsewhere.</label><label class="checkbox"><input type="radio" name="reason" value="inappropriate"><strong>Inappropriate</strong>This post is offensive, abusive, or violates our <a>community guidelines</a>.</label><label class="checkbox"><input type="radio" name="reason" value="spam"><strong>Spam</strong>This post is an advertisement.</label><label class="checkbox"><input type="radio" name="reason" value="other"><strong>Other</strong></label></div></div><div class="Form-group"><button class="Button Button--primary Button--block disabled" type="submit" disabled="" title="Flag Post"><span class="Button-label">Flag Post</span></button></div></div></div></form></div></div>';
+    $('.ModalManager').html(modal);
     $('.modal').modal('show');
   });
 
